set up viewport height

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <body>
 
       <!-- top section - make all blocks the same size -->
-      <section class="opener">
+      <section class="fullscreen opener">
          <header class="header"> 
          <!-- nav About ME,  Wb Applications,  Contact, resume -->
             <nav> 
@@ -44,7 +44,7 @@
 
       <!-- section 2 w about me link-->
       <!-- about me -->
-      <section class="about-me">
+      <section class="fullscreen about-me">
          <h2>About Me</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure a modi dolor, suscipit hic nihil quasi vitae ducimus natus eius aspernatur. Impedit corrupti consequatur, in eveniet at corporis illo obcaecati!</p>
             <br>
@@ -64,19 +64,19 @@
       <!-- web links w zoom on hover -->   
       <section>
          <!-- center all i=in each section -->
-         <div>
+         <div class="app-link">
             <h3><a href="https://evelynaguirreortiz.github.io/run-buddy/">Run Buddy</a></h3>
             <h4>HTML/CSS</h4>
          </div>
-         <div>
+         <div class="app-link">
             <h3><a href="https://evelynaguirreortiz.github.io/Horiseon-Website-Refactor-Challenge/">Horiseon</a></h3>
             <h4>HTML/CSS</h4>
          </div>
-         <div>
+         <div class="app-link">
             <h3>Example 3</h3>
             <h4>React</h4>
          </div>
-         <div></div>
+         <div class="app-link">
             <h3>Example 4</h3>
             <h4>JavaScript</h4>
       </section>  
