--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                <ul>
                <!-- need to add links -->
                   <li>
-                     <a href="about-me">About Me</a>
+                     <a href="#about-me">About Me</a>
                   </li>
                   <li>
-                     <a href="web-appplicatins">Web Applications</a>
+                     <a href="#web-applications">Web Applications</a>
                   </li>
                   <li>
-                     <a href="contact">Contact</a>
+                     <a href="#contact">Contact</a>
                   </li>
                </ul>  
             </nav>
@@ -44,7 +44,7 @@
 
       <!-- section 2 w about me link-->
       <!-- about me -->
-      <section class="fullscreen about-me">
+      <section id="about-me" class="fullscreen about-me">
          <h2>About Me</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure a modi dolor, suscipit hic nihil quasi vitae ducimus natus eius aspernatur. Impedit corrupti consequatur, in eveniet at corporis illo obcaecati!</p>
             <br>
@@ -57,18 +57,18 @@
       <!-- zoom on hover-->
 
       <!-- section 3 same centered in block-->
-      <section>
+      <section id="web-applications" class="fullscreen web-application">
          <h2>Web Applications</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate expedita voluptates quaerat? Modi nesciunt deserunt delectus dolorum amet, magnam distinctio tempore dolorem debitis temporibus animi iure dignissimos pariatur repellendus provident.</p>
       </section>   
       <!-- web links w zoom on hover -->   
-      <section>
+      <section class="portfolio-links">
          <!-- center all i=in each section -->
-         <div class="app-link">
+         <div class="app-link run-buddy">
             <h3><a href="https://evelynaguirreortiz.github.io/run-buddy/">Run Buddy</a></h3>
-            <h4>HTML/CSS</h4>
+            <h4>HTML</h4>
          </div>
-         <div class="app-link">
+         <div class="app-link horiseon">   
             <h3><a href="https://evelynaguirreortiz.github.io/Horiseon-Website-Refactor-Challenge/">Horiseon</a></h3>
             <h4>HTML/CSS</h4>
          </div>
@@ -79,6 +79,13 @@
          <div class="app-link">
             <h3>Example 4</h3>
             <h4>JavaScript</h4>
+         </div>
+
+         <div class="app-link">
+            <h3>Example 5</h3>
+            <h4>JavaScript</h4>
+         </div>
+         
       </section>  
 
       <footer>
