--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
          <!-- avatar -->
          <div class="avatar">
             
-            <img src="./assets/images/edit 2.jpg">
-            
+            <img src="./assets/images/avatar.jpg">
          </div>
 
         <div class="developer">
