update background image

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          <!-- avatar -->
          <div class="avatar">
             
-            <img src="./assets/images/avatar.jpg">
+            <img src="./assets/images/avatar_edited.jpg">
          </div>
 
         <div class="developer">
