--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <body>
 
       <!-- top section - make all blocks the same size -->
-      <section class="fullscreen opener">
+      <section class="intro">
          <header class="header"> 
          <!-- nav About ME,  Wb Applications,  Contact, resume -->
             <nav> 
@@ -19,7 +19,7 @@
                      <a href="#about-me">About Me</a>
                   </li>
                   <li>
-                     <a href="#web-applications">Web Applications</a>
+                     <a href="#projects">My Projects</a>
                   </li>
                   <li>
                      <a href="#contact">Contact</a>
@@ -43,7 +43,7 @@
 
       <!-- section 2 w about me link-->
       <!-- about me -->
-      <section id="about-me" class="fullscreen about-me">
+      <section id="about-me" class="about-me">
          <h2>About Me</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure a modi dolor, suscipit hic nihil quasi vitae ducimus natus eius aspernatur. Impedit corrupti consequatur, in eveniet at corporis illo obcaecati!</p>
             <br>
@@ -56,8 +56,8 @@
 <!-- PORTFOLIO LINKS -->   
 
       <!-- section 3 same centered in block-->
-      <section id="web-applications" class="web-application">
-         <h2>Web Applications</h2>
+      <section id="projects" class="web-application">
+         <h2>My Projects</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate expedita voluptates quaerat? Modi nesciunt deserunt delectus dolorum amet, magnam distinctio tempore dolorem debitis temporibus animi iure dignissimos pariatur repellendus provident.</p>
  <!--     </section>   -->
         
