--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                      <a href="#about-me">About Me</a>
                   </li>
                   <li>
-                     <a href="#projects">My Projects</a>
+                     <a href="#my-projects">My Projects</a>
                   </li>
                   <li>
                      <a href="#contact">Contact</a>
@@ -34,7 +34,7 @@
             <img src="./assets/images/avatar_edited.jpg">
          </div>
 
-        <div class="developer">
+        <div class="intro-text">
             <h1>Evelyn Aguirre</h1>
                <h2>Web Developer</h2>
                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -56,31 +56,31 @@
 <!-- PORTFOLIO LINKS -->   
 
       <!-- section 3 same centered in block-->
-      <section id="projects" class="web-application">
+      <section id="my-projects" class="my-projects">
          <h2>My Projects</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate expedita voluptates quaerat? Modi nesciunt deserunt delectus dolorum amet, magnam distinctio tempore dolorem debitis temporibus animi iure dignissimos pariatur repellendus provident.</p>
  <!--     </section>   -->
         
-      <section class="portfolio-links">
+      <section class="my-project-links">
          <!-- center all i=in each section -->
-         <div class="app-link run-buddy">
+         <div class="live-link run-buddy">
             <h3><a href="https://evelynaguirreortiz.github.io/run-buddy/">Run Buddy</a></h3>
             <h4>HTML</h4>
          </div>
-         <div class="app-link horiseon">   
+         <div class="live-link horiseon">   
             <h3><a href="https://evelynaguirreortiz.github.io/Horiseon-Website-Refactor-Challenge/">Horiseon</a></h3>
             <h4>HTML/CSS</h4>
          </div>
-         <div class="app-link">
+         <div class="live-link">
             <h3>Example 3</h3>
             <h4>React</h4>
          </div>
-         <div class="app-link">
+         <div class="live-link">
             <h3>Example 4</h3>
             <h4>JavaScript</h4>
          </div>
 
-         <div class="app-link">
+         <div class="live-link">
             <h3>Example 5</h3>
             <h4>JavaScript</h4>
          </div>
