add contact form

--- a/index.html
+++ b/index.html
@@ -107,14 +107,26 @@
       </section>
 
    <!-- restyle this -->
-      <section id="contact-me" class="contact-me">
+      <section id="contact-me" class="contact-form">
          <h2>Contact Me</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure a modi dolor, suscipit hic nihil quasi vitae ducimus natus eius aspernatur. Impedit corrupti consequatur, in eveniet at corporis illo obcaecati!</p>
             <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex odit voluptate veniam corrupti mollitia cumque harum nihil fuga facilis enim beatae veritatis, et repudiandae! Tempore hic quasi omnis eligendi iusto.</p>
-      
-      </section>
+            <br>
+            <form action="mailto:evelyn.aguirre.9895@gmail.com">
+               <label for= "contact-name"></label>
+               <input type="text" id="contact-name" placeholder="Your Name" />
+               <br>
+               <label for="your-email"></label>
+               <input type="text" id="your-email" placeholder="Your E-mail Address"></label>
+               <br>
+               <label for="contact message"></label>
+               <textarea id = "contact-message" placeholder="Message"></textarea>
 
+               <button type="submit">Send</button>
+            </form>
+
+      </section>
 
       <footer>
          <h5>Evelyn Aguirre, Web Designer 2022</h5>  
