add media queries

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       <!-- top section - make all blocks the same size -->
       <section class="intro">
          <header class="header"> 
-         <!-- nav About ME,  Wb Applications,  Contact, resume -->
             <nav> 
                <ul>
                <!-- need to add links -->
@@ -118,7 +117,7 @@
                <input type="text" id="contact-name" placeholder="Your Name" />
                <br>
                <label for="your-email"></label>
-               <input type="text" id="your-email" placeholder="Your E-mail Address"></label>
+               <input type="email" id="your-email" placeholder="Your E-mail Address"></label>
                <br>
                <label for="contact message"></label>
                <textarea id = "contact-message" placeholder="Message"></textarea>
