--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
                <h3><a href="https://evelynaguirreortiz.github.io/Horiseon-Website-Refactor-Challenge/">Horiseon</a></h3>
                <h4>HTML/CSS</h4>
             </div>
-            <div class="live-link">
+            <div class="live-link example-3">
                <h3>Example 3</h3>
                <h4>React</h4>
             </div>
-            <div class="live-link">
+            <div class="live-link example-4">
                <h3>Example 4</h3>
                <h4>JavaScript</h4>
             </div>
 
-            <div class="live-link">
+            <div class="live-link example-5">
                <h3>Example 5</h3>
                <h4>JavaScript</h4>
             </div> 
