add project screenshots

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0" />
+      <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0" />      
       <link rel="stylesheet" href="./assets/css/style.css" />
       <title>Evelyn Aguirre Web Developer</title>
    </head>
@@ -85,19 +85,19 @@
                <h4>HTML/CSS</h4>
             </div>
             <div class="live-link password-generator">
-               <h3></h3><a href="https://evelynaguirreortiz.github.io/javascript-password-generator-challenge-utsa-bc-02-2022/">Password Generator</a>
+               <h3><a href="https://evelynaguirreortiz.github.io/javascript-password-generator-challenge-utsa-bc-02-2022/">Password Generator</a></h3>
                <h4>HTML/CSS/JavaScript</h4>
             </div>
             <div class="live-link coding-quiz">
-               <h3></h3><a href="https://evelynaguirreortiz.github.io/coding-quiz-challenge-utsa-bc-02-2022/">Coding Quiz</a>
+               <h3><a href="https://evelynaguirreortiz.github.io/coding-quiz-challenge-utsa-bc-02-2022/">Coding Quiz</a></h3>
                <h4>HTML/CSS/JavaScript</h4>
             </div>
             <div class="live-link work-day-scheduler">
-               <h3></h3><a href="https://evelynaguirreortiz.github.io/work-day-scheduler-challenge-utsa-bc-03-2022/">Work Day Scheduler</a>
+               <h3><a href="https://evelynaguirreortiz.github.io/work-day-scheduler-challenge-utsa-bc-03-2022/">Work Day Scheduler</a></h3>
                <h4>HTML/CSS/JavaScript</h4>
             </div>
             <div class="live-link weather-dashboard">
-               <h3></h3><a href="https://evelynaguirreortiz.github.io/weather-dashboard-challenge-utsa-bc-03-2022/">Weather Dashboard</a>
+               <h3><a href="https://evelynaguirreortiz.github.io/weather-dashboard-challenge-utsa-bc-03-2022/">Weather Dashboard</a></h3>
                <h4>HTML/CSS/JavaScript</h4>
             </div> 
  
