fix broken link

--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
 
       <section class="my-project-links">
          <div class="live-link search-watch-chill">
-            <h3><a href="https://evelynaguirreortiz.github.io/run-buddy/">Search, Watch, Chill</a></h3>
+            <h3><a href="https://archiedonaho.github.io/Search-Watch-Chill/">Search, Watch, Chill</a></h3>
             <h4>HTML/CSS/JavaScript</h4>
          </div>
          <div class="live-link run-buddy">
-            <h3><a href="https://evelynaguirreortiz.github.io/run-buddy/">Run Buddy</a></h3>
+            <h3><a href="https://evelynaguirreortiz.github.io/run-buddy-module-1-project-utsa-bc-02-2022/">Run Buddy</a></h3>
             <h4>HTML/CSS</h4>
          </div>
          <div class="live-link horiseon">
-            <h3><a href="https://evelynaguirreortiz.github.io/Horiseon-Website-Refactor-Challenge/">Horiseon</a></h3>
+            <h3><a href="https://evelynaguirreortiz.github.io/horiseon-website-refactor-challenge-utsa-bc-02-2022/">Horiseon</a></h3>
             <h4>HTML/CSS</h4>
          </div>
          <div class="live-link password-generator">
