add new project link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <body>
 
-   <!-- INTRO -->
    <section class="intro">
       <header class="header">
          <nav>
@@ -86,21 +85,20 @@
          pariatur repellendus provident.</p>
 
       <section class="my-project-links">
+         <div class="live-link meet-up-satx">
+            <h3><a href="https://meet-up-satx.herokuapp.com/">Meet Up SATX</a></h3>
+            <h4>HTML/CSS/JavaScript</h4>
+         </div>
          <div class="live-link search-watch-chill">
             <h3><a href="https://archiedonaho.github.io/Search-Watch-Chill/">Search, Watch, Chill</a></h3>
             <h4>HTML/CSS/JavaScript</h4>
          </div>
-         <div class="live-link run-buddy">
-            <h3><a href="https://evelynaguirreortiz.github.io/run-buddy-module-1-project-utsa-bc-02-2022/">Run Buddy</a></h3>
-            <h4>HTML/CSS</h4>
+         <div class="live-link tech-blog">
+            <h3><a href="https://vast-retreat-56834.herokuapp.com/">My Tech Blog</a></h3>
+            <h4>JavaScript/Handlebars/CSS</h4>
          </div>
-         <div class="live-link horiseon">
-            <h3><a href="https://evelynaguirreortiz.github.io/horiseon-website-refactor-challenge-utsa-bc-02-2022/">Horiseon</a></h3>
-            <h4>HTML/CSS</h4>
-         </div>
-         <div class="live-link password-generator">
-            <h3><a href="https://evelynaguirreortiz.github.io/javascript-password-generator-challenge-utsa-bc-02-2022/">Password
-                  Generator</a></h3>
+         <div class="live-link note-taker">
+            <h3><a href="https://guarded-bastion-50474.herokuapp.com/">Notetaker</a></h3>
             <h4>HTML/CSS/JavaScript</h4>
          </div>
          <div class="live-link coding-quiz">
